Añadiendo toggle menu

--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
         </a>
         <span class="header__phrase">Postrería</span>
         <nav class="header__menu">
-          <ul class="menu__list">
+            <div id="toggle-menu" class="toggle-menu">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+          <ul id="menu__list" class="menu__list">
             <a href="index.html" class="menu__link">
               <li>Inicio</li>
             </a>
@@ -195,8 +198,9 @@
                 </nav>
             </div>
         </div>
-        <a href="" class="footer__link-dev">Creado por @PjDev1</a>
+        <a href="https://pjdev1.github.io/" class="footer__link-dev">Creado por @PjDev1</a>
       </footer>
     </div>
+    <script src="./assets/js/scripts.js"></script>
 </body>
 </html>
