Arreglando menu dedsplegable

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div id="toggle-menu" class="toggle-menu">
                 <i class="fa-solid fa-bars"></i>
             </div>
-          <ul id="menu__list" class="menu__list">
+          <ul id="menu__list" class="menu__list menu__list--show">
             <a href="index.html" class="menu__link">
               <li>Inicio</li>
             </a>
