Detalles de link yheader

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         </div>
       </section>
 
-      <section class="layout__section" id="nosotros">
-        <div class="section__container--bg">
+      <section class="layout__section">
+        <div class="section__container--bg" id="nosotros">
             <h2 class="section__title">Sobre Nosotros</h2>
             <div class="section__about-us">
                 <p class="about-us__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus totam laborum quae commodi suscipit perferendis ad ducimus fugiat amet dicta iusto iure vero alias, ipsam eaque eveniet consectetur tempora provident veritatis quis est delectus, beatae hic unde. Dolorem, suscipit error. Quibusdam maiores praesentium accusantium, a doloremque dolores facilis placeat sint tempora quae. Eveniet, odio quod? Dignissimos, veritatis doloribus quae, libero eius, autem ad debitis hic illo ipsum non officiis voluptates.</p>
