Deleted: Whatsapp link

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <main class="layout__content">
         <div class="content__container">
             <span class="content__title"></span>
-            <a href="https://api.whatsapp.com/send?phone=5217471054468&text=Hola%2C%20quiero%20conocer%20el%20cat%C3%A1logo%20%E2%9C%A8" class="content__btn" target="_blank">Ordena aquí</a>
+            <a href="#" class="content__btn" target="_blank">Ordena aquí</a>
         </div>
       </main>
       <section class="layout__section" id="productos">
@@ -189,7 +189,7 @@
                                 <i class="fa-brands fa-instagram"></i>
                             </li>
                         </a>
-                        <a href="https://api.whatsapp.com/send?phone=5217471054468&text=Hola%2C%20quiero%20conocer%20el%20cat%C3%A1logo%20%E2%9C%A8">
+                        <a href="#">
                             <li>
                                 <i class="fa-brands fa-whatsapp"></i>
                             </li>
